syntax = "proto3";

package service.v1;

option go_package = "github.com/Parnishkaspb/ozon_posts_proto/gen/service/v1;servicepb";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}


service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
}

message CreateUserRequest {
  string login = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
}

message CreateUserResponse {
  string id = 1;
}

message GetUsersRequest {
  repeated string ids = 1;
}

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
}

message GetUsersResponse {
  repeated User users = 1;
}


service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {}
}

message CreatePostRequest {
  string author_id = 1;
  string text = 2;
  bool without_comment = 3;
}

message Post {
  string id = 1;
  string author_id = 2;
  string text = 3;
  bool without_comment = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostsRequest {
  repeated string ids = 1;
}

message GetPostsResponse {
  repeated Post posts = 1;
}


service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {}
  rpc GetCommentsByPost(GetCommentsByPostRequest) returns (GetCommentsResponse) {}
  rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse) {}
}

message CreateCommentRequest {
  string post_id = 1;
  string author_id = 2;
  string parent_id = 3;
  string text = 4;
}

message Comment {
  string id = 1;
  string post_id = 2;
  string author_id = 3;
  string parent_id = 4;
  string text = 5;
  google.protobuf.Timestamp created_at = 6;
}

message CreateCommentResponse {
  Comment comment = 1;
}

message GetCommentsByPostRequest {
  string post_id = 1;
}

message GetCommentsRequest {
  repeated string ids = 1;
}

message GetCommentsResponse {
  repeated Comment comments = 1;
}